# cuZFP

./: .gitignore  CMakeLists.txt  README.md
czfp/: CMakeLists.txt
czfp/examples/: CMakeLists.txt  Makefile
czfp/inc/: bitstream.h  zfp.h
czfp/src/: CMakeLists.txt  decode1d.c  decode3d.c  decode3f.c  encode2d.c
czfp/src/template/: codec1.c  codec3.c  decode.c  decode1.c  decode2.c  encode.c  encode2.c  encode3.c
examples/: CMakeLists.txt  main.c
inc/: bitstream.h  codec.h  types.h  zfp.h  zfparray3.h
original/: CMakeLists.txt
original/examples/: CMakeLists.txt
original/src/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  bitstream.c  block1.h  block2.h  block3.h  decode.c  decode1f.c  decode2d.c  decode2f.c  encode.c  encode1d.c  encode1f.c  encode2f.c  encode3d.c  encode3f.c  main.c  traitsd.h  traitsf.h
src/CMake/: SetupCuda.cmake
src/cuZFP/: BitStream.cuh  CMakeLists.txt  ErrorCheck.cu  ErrorCheck.h  WriteBitter.cuh  aligned_writer.cuh  constant_setup.cuh  constants.h  cuZFP.cu  cuZFP.cuh  cuZFP.h  decode.cu  decode.cuh  decode1.cuh  decode2.cuh  decode3.cuh  encode.cu  encode.cuh  encode1.cuh  encode2.cuh  encode3.cuh  shared.h  type_info.cuh  zfp_structs.h
src/inline/: bitstream.c
src/template/: codec2.c  decode3.c  encode.c  encode1.c  template.h
src/tests/: CMakeLists.txt  t_cuda_mem.cu  t_encode_decode.cpp  t_encode_decode_1.cpp  t_encode_decode_2.cpp  t_encode_decode_3.cpp  t_encode_decode_rand.cpp  t_encode_decode_rand_3.cpp  t_sanity_check.cpp  t_sanity_check_1.cpp  t_sanity_check_2.cpp  t_sanity_check_3.cpp
src/thirdparty_builtin/: CMakeLists.txt
src/utils/: CMakeLists.txt  cuda_zfp.cpp  data_gen.cpp  test.py
tech_report/: scitech-header.eps  scitechrep.sty  template.tex  template2015.aux  template2015.bbl  template2015.blg  template2015.out  template2015.tex  uofulogo.eps  vgtc.cls
tests/: BitStream.cuh  CMakeLists.txt  ErrorCheck.cpp  ErrorCheck.h  array3d.h  decode.cuh  fixed_point.cuh  main.cu  test_all.cu  test_bitstream.cu  test_combustion.cu  test_decode.cu  test_decode_par.cu  test_decorrelate.cu  test_diffusion.cu  test_encode_par.cu  test_exp.cu  test_fixed_point.cu  test_heptane.cu  test_int2uint.cu  test_inv_xform.cu  test_parallel.cu  test_primitives.cu  test_rayleigh.cu  test_rmi.cu  test_ull128.cu
v0.5/examples/: CMakeLists.txt
v0.5/inc/: bitstream.h
v0.5/src/: CMakeLists.txt
v1.0/: encode.cuh  test_all.cu  test_bitstream.cu  test_decode.cu  test_decorrelate.cu  test_exp.cu  test_fixed_point.cu
v1.0/tests/: CMakeLists.txt  test_bitstream.cu  test_fixed_point.cu  test_int2uint.cu
v2.0/include/: BitStream.cuh  WriteBitter.cuh  cuZFP.cuh  decode.cuh  encode.cuh  shared.h  ull128.h
zfp/: CMakeLists.txt
zfp/examples/: CMakeLists.txt  Makefile
