###############################################################################
#
#   Thirdparty Builtin
#
###############################################################################

##############################
#   Add GTest
##############################
add_subdirectory(gtest-1.7.0)

##############################
#   Add zfp
##############################
add_subdirectory(zfp-0.5.0)
